--- a/src/main/resources/map.yml
+++ b/src/main/resources/map.yml
@@ -296,6 +296,48 @@ logger:
           inverted: false
           resetPosition: true
         startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': leftCargoShipToLoadRev
+        left:
+          '@id': leftCargoShipToLoadRevLeft
+          filename: "/home/lvuser/449_resources/robot2019LeftFLToLoadRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        right:
+          '@id': leftCargoShipToLoadRevRight
+          filename: "/home/lvuser/449_resources/robot2019RightFLToLoadRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': rightCargoShipToLoadRev
+        left:
+          '@id': rightCargoShipToLoadRevLeft
+          filename: "/home/lvuser/449_resources/robot2019LeftFRToLoadRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        right:
+          '@id': leftCargoShipToLoadRevRight
+          filename: "/home/lvuser/449_resources/robot2019RightFRToLoadRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': cargoShipToLoadFwd
+        left:
+          '@id': cargoShipToLoadFwdLeft
+          filename: "/home/lvuser/449_resources/robot2019LeftFToLoadFwdProfile.csv"
+          inverted: false
+          resetPosition: true
+        right:
+          '@id': cargoShipToLoadFwdRight
+          filename: "/home/lvuser/449_resources/robot2019RightFToLoadFwdProfile.csv"
+          inverted: false
+          resetPosition: true
+        startAngle: 0
     - org.usfirst.frc.team449.robot.jacksonWrappers.FPSTalon:
         &legElevator
         '@id': backLegElevatorTalon
