--- a/src/main/resources/map.yml
+++ b/src/main/resources/map.yml
@@ -319,7 +319,7 @@ logger:
           inverted: true
           resetPosition: true
         right:
-          '@id': leftCargoShipToLoadRevRight
+          '@id': rightCargoShipToLoadRevRight
           filename: "/home/lvuser/449_resources/robot2019RightFRToLoadRevProfile.csv"
           inverted: true
           resetPosition: true
@@ -335,6 +335,62 @@ logger:
         right:
           '@id': cargoShipToLoadFwdRight
           filename: "/home/lvuser/449_resources/robot2019RightFToLoadFwdProfile.csv"
+          inverted: false
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': leftLoadToCargoShipRev
+        left:
+          '@id': leftLoadToCargoShipRevLeft
+          filename: "/home/lvuser/449_resources/robot2019LeftLoadToLeftRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        right:
+          '@id': leftLoadToCargoShipRevRight
+          filename: "/home/lvuser/449_resources/robot2019RightLoadToLeftRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': rightLoadToCargoShipRev
+        left:
+          '@id': rightLoadToCargoShipRevLeft
+          filename: "/home/lvuser/449_resources/robot2019LeftLoadToRightRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        right:
+          '@id': rightLoadToCargoShipRevRight
+          filename: "/home/lvuser/449_resources/robot2019RightLoadToRightRevProfile.csv"
+          inverted: true
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': leftLoadToCargoShipFwd
+        left:
+          '@id': leftLoadToCargoShipFwdLeft
+          filename: "/home/lvuser/449_resources/robot2019LeftLoadToLFProfile.csv"
+          inverted: false
+          resetPosition: true
+        right:
+          '@id': leftLoadToCargoShipFwdRight
+          filename: "/home/lvuser/449_resources/robot2019RightLoadToLFProfile.csv"
+          inverted: false
+          resetPosition: true
+        startAngle: 0
+    - org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP:
+        <<: *gyroMP
+        '@id': rightLoadToCargoShipFwd
+        left:
+          '@id': rightLoadToCargoShipFwdLeft
+          filename: "/home/lvuser/449_resources/robot2019LeftLoadToLRProfile.csv"
+          inverted: false
+          resetPosition: true
+        right:
+          '@id': rightLoadToCargoShipFwdRight
+          filename: "/home/lvuser/449_resources/robot2019RightLoadToLRProfile.csv"
           inverted: false
           resetPosition: true
         startAngle: 0
@@ -834,6 +890,24 @@ buttons:
             org.usfirst.frc.team449.robot.drive.unidirectional.DriveUnidirectionalWithGyroShiftable:
               drive
       action: WHEN_PRESSED
+    - button:
+        org.usfirst.frc.team449.robot.commands.autonomous.Auto2019DoubleHatch:
+          '@id': secondHatchAuto
+          hatchMech:
+              org.usfirst.frc.team449.robot.subsystem.interfaces.solenoid.SolenoidSimple: hatchSolenoid
+          leftLoadToRevCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: leftCargoShipToLoadRev
+          rightLoadToRevCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: rightCargoShipToLoadRev
+          toLoadFwdCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabalizedMP: cargoShipToLoadFwd
+          leftLoadToFwdCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: leftLoadToCargoShipFwd
+          rightLoadToFwdCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: rightLoadToCargoShipFwd
+          loadToRevCommand:
+            org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: loadToCargoShipRev
+          startingSideSwitch:
 #    - button:
 #        org.usfirst.frc.team449.robot.oi.buttons.SimpleButton:
 #          '@id': testLiftButton
