--- a/src/main/resources/map.yml
+++ b/src/main/resources/map.yml
@@ -916,6 +916,21 @@ buttons:
             org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: leftLoadToCargoShipRev
           rightLoadToRevCommand:
             org.usfirst.frc.team449.robot.commands.multiInterface.RunGyroStabilizedMP: rightLoadToCargoShipRev
+          leftNavXTurnToAngle:
+            org.usfirst.frc.team449.robot.commands.multiInterface.drive.NavXTurnToAngle:
+              &autoTurn
+              '@id': autoToLoadLeftTurn
+              setpoint: 90
+              subsystem:
+                org.usfirst.frc.team449.robot.drive.unidirectional.DriveUnidirectionalWithGyroShiftable:
+                  drive
+              timeout: 2
+              absoluteTolerance: 2
+          rightNavXTurnToAngle:
+            org.usfirst.frc.team449.robot.commands.multiInterface.drive.NavXTurnToAngle:
+              <<: *autoTurn
+              '@id': autoToLoadRightTurn
+              setpoint: -90
           startingSideSwitch:
             org.usfirst.frc.team449.robot.jacksonWrappers.MappedDigitalInput: digitalInput
       action: WHEN_PRESSED
