--- a/src/main/resources/test_bed.yml
+++ b/src/main/resources/test_bed.yml
@@ -250,7 +250,7 @@ logger:
       '@id': cargoArmPivotMotor
       port: 7
       name: "arm"
-      enableBrakeMode: false
+      enableBrakeMode: true
       reverseOutput: true
       reverseSensor: true
       enableVoltageComp: true
@@ -261,14 +261,14 @@ logger:
       postEncoderGearing: 0.3666666666666666666666
       perGearSettings:
         - maxSpeed: 1
-          posKP: 0.0
+          posKP: 0.5
           posKD: 0.0
           feedForwardComponent:
             org.usfirst.frc.team449.robot.generalInterfaces.doubleUnaryOperator.feedForwardComponent.FeedForwardArmComponent:
               kVFwd: 8.223
-              interceptVoltageFwd: 0.6722
+#              interceptVoltageFwd: 0.6722
               cosTerm: 2.1098
-              startingAngle: -15
+              startingAngle: 0
 defaultCommands:
     - subsystem:
         org.usfirst.frc.team449.robot.drive.unidirectional.DriveUnidirectionalWithGyroShiftable:
@@ -303,26 +303,6 @@ defaultCommands:
               kP: 0.3
               kI: 0
               kD: 0.0
-    - subsystem:
-        org.usfirst.frc.team449.robot.subsystem.interfaces.analogMotor.AnalogMotorRawPosition:
-          '@id': cargoArmPivot
-          motor:
-            org.usfirst.frc.team449.robot.jacksonWrappers.FPSTalon:
-              cargoArmPivotMotor
-      command:
-        org.usfirst.frc.team449.robot.subsystem.interfaces.analogMotor.commands.ControlAnalogMotorWithThrottle:
-          '@id': cargoArmPivotCommand
-          subsystem:
-            org.usfirst.frc.team449.robot.subsystem.interfaces.analogMotor.AnalogMotorRawPosition:
-              cargoArmPivot
-          throttle:
-            org.usfirst.frc.team449.robot.oi.throttles.ThrottleBasic:
-              '@id': cargoArmPivotThrottle
-              axis: 5
-              stick:
-                org.usfirst.frc.team449.robot.jacksonWrappers.MappedJoystick:
-                  '@id': mechanismsGamepad
-                  port: 2
 ##            setpointSupplier:
 ##               org.usfirst.frc.team449.robot.components.LimeLightAngularToDistanceComponent:
 ##                  angularInput:
@@ -388,8 +368,8 @@ updater:
         navX
     - org.usfirst.frc.team449.robot.jacksonWrappers.PDP:
         PDP
-    - org.usfirst.frc.team449.robot.oi.throttles.ThrottleBasic:
-        cargoArmPivotThrottle
+#    - org.usfirst.frc.team449.robot.oi.throttles.ThrottleBasic:
+#        cargoArmPivotThrottle
 buttons:
   - button:
       org.usfirst.frc.team449.robot.oi.buttons.SimpleButton:
@@ -475,8 +455,8 @@ buttons:
                 inverted: false
                 enableVoltageComp: true
             inFastVel: -1
-            inSlowVel: -0.2
-            outFastVel: 1
+            inSlowVel: -0.4
+            outFastVel: 0.7
         mode: IN_SLOW
     action: WHEN_PRESSED
 #iNTAKEoFF
@@ -526,7 +506,7 @@ buttons:
         joystick:
           org.usfirst.frc.team449.robot.jacksonWrappers.MappedJoystick:
             mechanismsGamepad
-          buttonNumber: 3
+        buttonNumber: 3
     command:
       org.usfirst.frc.team449.robot.subsystem.interfaces.position.commands.StayAtPosition:
         '@id': raiseArm
@@ -538,15 +518,15 @@ buttons:
                 cargoArmPivotMotor
             onTargetTolerance: 0.01
         # (90 + 15)/360
-        setpoint: 0.2917
-      action: WHEN_PRESSED
+        setpoint: 0.25
+    action: WHEN_PRESSED
   - button:
       org.usfirst.frc.team449.robot.oi.buttons.SimpleButton:
         '@id': lowerArmButton
         joystick:
           org.usfirst.frc.team449.robot.jacksonWrappers.MappedJoystick:
             mechanismsGamepad
-          buttonNumber: 4
+        buttonNumber: 4
     command:
       org.usfirst.frc.team449.robot.commands.general.CommandSequence:
         '@id': lowerArmSequence
@@ -557,10 +537,10 @@ buttons:
                 org.usfirst.frc.team449.robot.subsystem.interfaces.position.SubsystemPositionSimple:
                   cargoArmPivot
               # 15/360
-              setpoint: 0.01
+              setpoint: 0.03
           - org.usfirst.frc.team449.robot.subsystem.interfaces.position.commands.DisableMotor:
               '@id': disableArm
               subsystem:
                 org.usfirst.frc.team449.robot.subsystem.interfaces.position.SubsystemPositionSimple:
                   cargoArmPivot
-      action: WHEN_PRESSED
+    action: WHEN_PRESSED
