--- a/src/main/resources/test_bed.yml
+++ b/src/main/resources/test_bed.yml
@@ -442,10 +442,10 @@ buttons:
             port: 2
         buttonNumber: 1
     command:
-      org.usfirst.frc.team449.robot.subsystem.interfaces.intake.commands.SetIntakeMode:
+      org.usfirst.frc.team449.robot.commands.multiInterface.IntakeUntilConditionMet:
         '@id': cargoIntakeCommand
         subsystem:
-          org.usfirst.frc.team449.robot.subsystem.interfaces.intake.IntakeSimple:
+          org.usfirst.frc.team449.robot.subsystem.complex.intake.IntakeurrentLimited:
             '@id': cargoIntake
             motor:
               org.usfirst.frc.team449.robot.generalInterfaces.simpleMotor.MappedVictorSPX:
@@ -454,10 +454,12 @@ buttons:
                 brakeMode: true
                 inverted: false
                 enableVoltageComp: true
-            inFastVel: -1
-            inSlowVel: -0.4
+            inFastVel: -0.4
+            inSlowVel: -0.1
             outFastVel: 0.7
-        mode: IN_SLOW
+            currentLimit: 10
+        intakeMode: IN_FAST
+        stopMode: "OFF"
     action: WHEN_PRESSED
 #iNTAKEoFF
   - button:
@@ -467,7 +469,7 @@ buttons:
       org.usfirst.frc.team449.robot.subsystem.interfaces.intake.commands.SetIntakeMode:
         '@id': stopIntakeCommand
         subsystem:
-          org.usfirst.frc.team449.robot.subsystem.interfaces.intake.IntakeSimple:
+          org.usfirst.frc.team449.robot.subsystem.complex.intake.IntakeurrentLimited:
             cargoIntake
         mode: "OFF"
     action: WHEN_RELEASED
@@ -483,7 +485,7 @@ buttons:
       org.usfirst.frc.team449.robot.subsystem.interfaces.intake.commands.SetIntakeMode:
         '@id': cargoOutputCommand
         subsystem:
-          org.usfirst.frc.team449.robot.subsystem.interfaces.intake.IntakeSimple:
+          org.usfirst.frc.team449.robot.subsystem.complex.intake.IntakeurrentLimited:
             cargoIntake
         mode: OUT_FAST
     action: WHEN_PRESSED
@@ -495,7 +497,7 @@ buttons:
         org.usfirst.frc.team449.robot.subsystem.interfaces.intake.commands.SetIntakeMode:
           '@id': stopOutputCommand
           subsystem:
-            org.usfirst.frc.team449.robot.subsystem.interfaces.intake.IntakeSimple:
+            org.usfirst.frc.team449.robot.subsystem.complex.intake.IntakeurrentLimited:
               cargoIntake
           mode: "OFF"
     action: WHEN_RELEASED
